--- a/_sources/time_frequency.Rmd
+++ b/_sources/time_frequency.Rmd
@@ -35,7 +35,7 @@ import pandas as pd
 pd.set_option('mode.copy_on_write', True)
 import matplotlib.pyplot as plt
 # Set default colormap.
-plt.rc('image', cmap='grey')
+plt.rc('image', cmap='Greys')
 ```
 
 The data are from the [first training file in a single-lead ECG
